# git-nearit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.gitea/workflows/: build-publish.yml  release.yml  unit-tests.yml
.gitlab-ci/workflows/: merge-request.yml
git_nearit/: __init__.py  cli.py  config.py  main.py  utils.py
git_nearit/clients/: __init__.py  base_vcs_client.py  git_client.py  gitea_client.py  gitlab_client.py
git_nearit/models/: __init__.py  base_review.py  git_repository.py  review.py  review_detail.py  review_list_item.py  review_summary.py
tests/: base.py
tests/unit/: test_branch_workflow.py  test_cli.py  test_cli_workflow.py  test_config.py  test_git_client.py  test_gitea_client.py  test_gitlab_client.py  test_main.py  test_utils.py
